Fixed layout issue with Latest Adventures section and added mountain hikers image.

--- a/themes/inhabitent/sass/_home.scss
+++ b/themes/inhabitent/sass/_home.scss
@@ -193,8 +193,14 @@
     }
   }
 
+  .adventure-bottom {
+    display: flex;
+  }
+
   .adventure-bottom1 {
-    background-color: gray;
+    background: linear-gradient(rgba(0,0,0,0.25) 0%, rgba(0,0,0,0.25) 100% ),
+    url('../../images/mountain-hikers.jpg');
+    background-size: cover,cover;
     width: 268px;
     height: 227px;
     border: 1px solid gray;
